[gd_scene load_steps=3 format=3 uid="uid://djm18s8h6ukxr"]

[ext_resource type="Script" path="res://Game/Interface/Stacks/entity_ui.gd" id="1_mr1j7"]
[ext_resource type="PackedScene" uid="uid://da3vo5rgmwv44" path="res://Game/Interface/Stacks/stack_component.tscn" id="2_apacx"]

[node name="EntityUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_mr1j7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EntityNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nom de l'entité"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/HBoxContainer"]
layout_mode = 2

[node name="StackNameLabel" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$Stack (séquence)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StackGrid" type="GridContainer" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StackComponent" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/StackGrid" instance=ExtResource("2_apacx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
